--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
             <version>4.2.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>htmlunit-driver</artifactId>
+            <version>2.52.0</version>
+        </dependency>
 
 
     </dependencies>
